# rust_sdl2_opengl_emscripten

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Web.toml  build.rs  title.txt
.cargo/: config
src/: game.rs  main.rs  scene.rs  window.rs
src/gl/: camera.rs  color.rs  mod.rs  shader.rs  vao.rs  vbo.rs
static/: index.html
